# vault

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Get-AzureAppOnwer.ps1  LICENSE  MSOLSpray.ps1  New-AzureToken.ps1  README.md  TROUBLESHOOTING.md  azure-login.ps1  gitlab-ci.yml  install_caldera.sh  pyproject.toml
Detection_Rules/: .gitlab-ci.yml  gitlab-ci.yml
Detection_Rules/Azure Analytics/: .gitlab-ci.yml
Detection_Rules/Azure Analytics/Experimental/: T1485.001 Data Destruction-Lifecycle-Triggered Deletion
Detection_Rules/Azure/Monitor Changes in Azure Resource Hierarchy/: CTE_Monitor_Changes_in_Azure_Resource_Hierarchy.json
Detection_Rules/VOLT TYPHOON LOTL/: CTE_Volt_Typhoon_Activity.json
IaaC/: .gitlab-ci.yml
RTFM/: Hacking_notes__AutoRecovered_.docx
archive/scripts/: Backup.ps1  azure-login.ps1
config/: common.tfvars.example
infrastructure/aws/cloudtrail/: main.tf  outputs.tf  (+1 more)
scripts/: Add-AzureSPSecret.ps1  Backup.ps1  BackupAnalyticRules.ps1  Get-AzureAppOnwer.ps1  Get-SentinelAnalyticsRuleYAML.ps1  JSONparser.ps1  MSOLSpray.ps1  WorkingJSONPArser.ps1  azure-login.ps1  install_caldera.sh
source/: __init__.py
source/attacks/: base.py
source/utils/: git.py  installer.py  version.py
stealth-labs/: .gitignore  README.md
terraform/: main.tf
vault/: Makefile  __init__.py  __main__.py  vault.sh
vault/attacks/: __init__.py
vault/cli/: banners.py  commands.py  formatting.py  shell.py
vault/core/: lab.py  state.py  terraform.py
vault/providers/: base.py
vault/scripts/: cleanup.sh  crucible.sh  labctl.sh
vault/utils/: search.py
(+607 files in other folders)
