[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vault*"]
exclude = ["labs*", "config*", "modules*"]

[project]
name = "vault"
version = "1.1.0"
description = "Virtual Attack Utility Lab Terminal"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "ruff>=0.1.7",
]

[project.scripts]
vault = "vault.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true